--- a/9.0 Display Flex/inline-block.html
+++ b/9.0 Display Flex/inline-block.html
@@ -26,7 +26,6 @@
 </head>
 
 <body>
-
   <body>
     <h1>Inline-Block</h1>
     <div class="one">
@@ -50,5 +49,5 @@
         veniam officia ea doloribus dolor. Atque, dolore exercitationem. Expedita, eius?</p>
     </div>
   </body>
-
+</body>
 </html>
