--- a/Boss Level Challenges/Dicee Game/dicee.html
+++ b/Boss Level Challenges/Dicee Game/dicee.html
@@ -25,5 +25,5 @@
     </div>
   </body>
   <script src="index.js" charset="UTF-8"></script>
-  <footer>www 🎲 App Brewery 🎲 com</footer>
+  <footer>www 🎲 Naveen Sharma 🎲 com</footer>
 </html>
